# godric

./: .gitattributes  CMakeLists.txt  Findexternpro.cmake  godric.cpp
test/: Sample_DataString.txt  test.sh
