cmake_minimum_required(VERSION 3.17)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
include(preproject)
project(godric VERSION 1.0.0.0)
set(externpro_REV 20.10.1)
find_package(externpro REQUIRED)
xpSetFlags()
xpFindPkg(PKGS boost)
set(CPACK_GENERATOR ZIP)
include(CPack)
add_executable(${PROJECT_NAME} godric.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE Boost::filesystem Boost::program_options)
install(TARGETS ${PROJECT_NAME} DESTINATION .)
